minor alignment fix

--- a/wdd-130/wwr/styles/styles.css
+++ b/wdd-130/wwr/styles/styles.css
@@ -28,7 +28,7 @@ nav a {
   margin-top: 100px;}
 
 #hero-img {
-  align-items: center;
+  align-items: center; align-content: center;
 }
 #hero-msg h1{ text-align: center;}
 #hero-msg h4 {
@@ -150,11 +150,11 @@ footer .social img {
 #hero {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin-top: -100px; 
+  margin-top: -100px; align-content: center;align-self: center;
 }
 #hero-box {
-  grid-column: 1/4;
-  grid-row: 1/3; z-index: -1;align-self: center;
+  grid-column: 2/9;
+  grid-row: 1/3; z-index: -1;align-self: center; align-content: center;
 }
 .home-grid{
   display:grid;grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
